@@ -7,7 +7,7 @@ rckate_DATA = kateui.rc katepartui.rc katepartbrowserui.rc
 syntaxkatedir = $(kde_datadir)/kate/syntax
 syntaxkate_DATA = language.dtd cpp.xml c.xml html.xml kbasic.xml objectivec.xml changelog.xml ada.xml css.xml perl.xml php.xml xml.xml \
 java.xml rpmspec.xml sql.xml vhdl.xml diff.xml bash.xml latex.xml postscript.xml ruby.xml desktop.xml syntax.template \
-eiffel.xml pascal.xml
+eiffel.xml pascal.xml sather.xml
 
 rckwritedir = $(kde_datadir)/kwrite
 rckwrite_DATA = kwriteui.rc
