@@ -1,4 +1,5 @@
 2001-08-19  christian@kdevelop.org
+  * added back Sather highlighting support
   * improved Eiffel language syntax highlighting support
   * added Eiffel language comment directive in eiffel.xml
   * added Ada language comment directive in ada.xml 
